config/kubernetes/templates/deploy-namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: commit
  labels:
    name: commit
