config/kubernetes/templates/virtual-host-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-production-virtual-host-ingress
  namespace: production
spec:
  rules:
  - host: "truffle.tools"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-production-graphql-backend-port
            port:
              number: 3001
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-production-ui-port
            port:
              number: 3000
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-staging-virtual-host-ingress
  namespace: staging
spec:
  rules:
  - host: "staging.truffle.tools"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: ${APP}-staging-graphql-backend-port
            port:
              number: 3001
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${APP}-staging-ui-port
            port:
              number: 3000
  ingressClassName: nginx
